--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
+    <link rel="stylesheet" href="styles/architect.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
+        <nav class="navbar">
+            <h3 class="brand">G3 Architects</h3>
+        </nav>
 
     </header>
 
@@ -14,7 +18,7 @@
 
 
     </main>
-    
+
     <footer>
 
     </footer>
